Integrated new and create actions for portfolio_info

--- a/app/views/portfolio_infos/index.html.erb
+++ b/app/views/portfolio_infos/index.html.erb
@@ -4,6 +4,6 @@
 <p><%= portfolio_info.title %></p>
 <p><%= portfolio_info.subtitle %></p>
 <p><%= portfolio_info.body %></p>
-<%= image_tag portfolio_info.thumb_image %>
+<%= image_tag portfolio_info.thumb_image unless portfolio_info.thumb_image.nil? %>
 
 <% end %>
