Added new and edit buttons for portfolio items

--- a/app/views/portfolio_infos/index.html.erb
+++ b/app/views/portfolio_infos/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Portfolio Items</h1>
+<%= link_to "Create new item", new_portfolio_info_url %>
 
 <% @portfolio_infos.each do |portfolio_info| %>
 <p><%= portfolio_info.title %></p>
 <p><%= portfolio_info.subtitle %></p>
 <p><%= portfolio_info.body %></p>
 <%= image_tag portfolio_info.thumb_image unless portfolio_info.thumb_image.nil? %>
+<%= link_to "Edit", edit_portfolio_info_path(portfolio_info.id) %>
 
 <% end %>
