--- a/app/views/portfolio_infos/index.html.erb
+++ b/app/views/portfolio_infos/index.html.erb
@@ -7,5 +7,5 @@
 <p><%= portfolio_info.body %></p>
 <%= image_tag portfolio_info.thumb_image unless portfolio_info.thumb_image.nil? %>
 <%= link_to "Edit", edit_portfolio_info_path(portfolio_info.id) %>
-
+<%= link_to "Delete Portfolio Item", portfolio_info_path(portfolio_info), method: :delete, data: { confirm: "Are you Sure?" } %>
 <% end %>
